# mesos-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: client.rs  event_stream.rs  executor.rs  executor_client.rs  executor_event_stream.rs  executor_router.rs  lib.rs  recordio.rs  scheduler.rs  scheduler_client.rs  scheduler_event_stream.rs  scheduler_router.rs  util.rs
src/proto/: executor.rs  mesos.rs  mod.rs  scheduler.rs
test/: test.rs  test_scheduler.rs
